--- a/client/stylesheets/sass/mixins/_shape-scaling-animation.scss
+++ b/client/stylesheets/sass/mixins/_shape-scaling-animation.scss
@@ -1,6 +1,7 @@
 
 .circle-container{
   width: 100%;
+  overflow: hidden;
 }
 .circle {
     -webkit-animation: grow 10s;
@@ -11,7 +12,7 @@
     z-index: -1;
     border-radius: 100%;
     overflow: hidden;
-    position: absolute;
+    position: relative;
 
 }
 @-webkit-keyframes grow {
